# OpenKuro

./: .env.example  .gitignore  Dockerfile  GATEWAY_ROADMAP.md  LICENSE  QUICK_START_SCHEDULER.md  README.md  README.zh-TW.md  config.example.yaml  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  test_audit_chain_phase6.py  test_data_firewall_phase5.py  test_gateway_phase7_drill_suite.py  test_gateway_rollout_phase7.py  test_isolated_runner_phase4.py  test_secret_broker.py  test_web_port_fallback.py
docs/: DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DISCORD_GUIDE.md  DOCKER_DEPLOYMENT.md  GATEWAY_PHASE1_VALIDATION.md  GATEWAY_PHASE7_DRILL.md  MEMORY_ARCHITECTURE.md  ML_TRAINING_GUIDE.md  SCHEDULER_GUIDE.md  SYSTEM_ARCHITECTURE.md
plugins/: comfyui_tools.py
scripts/: gateway_phase1_validate.py  gateway_phase7_drill.py  gateway_rollback.py
skills/: market_monitor.md
skills/api-tester/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/daily-report/: SKILL.md
skills/data-analyst/: SKILL.md
skills/debug-assistant/: SKILL.md
skills/email-writer/: SKILL.md
skills/git-helper/: SKILL.md
skills/skill-plugin-writer/: SKILL.md
skills/study-helper/: SKILL.md
skills/translator/: SKILL.md
src/: __init__.py  config.py  main.py  openai_catalog.py
src/adapters/: __init__.py  base.py  dashboard_commands.py  discord_adapter.py  email_adapter.py  (+5 more)
tests/: test_analytics.py  test_collaboration.py  test_email_adapter.py  test_line.py  test_phase4.py  test_phase5.py  test_slack.py
training/: __init__.py  evaluate.py  export_onnx.py  generate_data.py  train.py
(+144 files in other folders)
